--- a/UrlShortener/UrlShortener/Views/Shared/_Layout.cshtml
+++ b/UrlShortener/UrlShortener/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - UrlShortener</p>
+            <p>&copy; 2018 - www.danielporto.pt</p>
         </footer>
     </div>
 
